Allow 3.1 references to have summary and description
In OpenAPI 3.1 references can have summary and description metadata for
nodes that support those fields. They operate in a cascading pattern
where each reference can overwrite the previous ones.

--- a/spec/support/examples/v3.1/changes.yaml
+++ b/spec/support/examples/v3.1/changes.yaml
@@ -8,6 +8,18 @@ info:
   #   identifier: Apache-2.0
 # jsonSchemaDialect: https://spec.openapis.org/oas/3.1/dialect/base
 components:
+  examples:
+    FullExample:
+      summary: Original summary
+      description: Original description
+      value: anything
+    ReferencedExample:
+      summary: Referenced summary
+      description: Referenced Description
+      $ref: "#/components/examples/FullExample"
+    DoubleReferencedExample:
+      summary: Double referenced summary
+      $ref: "#/components/examples/ReferencedExample"
   schemas:
     BasicSchema:
       description: "My basic schema"
